<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.said.villefuteeips2017.storeDisplay">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-3dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/show_input_image"
                android:layout_width="304dp"
                android:layout_height="177dp"
                android:contentDescription="@string/todo"
                app:srcCompat="@mipmap/ic_launcher_round" />

            <TextView
                android:id="@+id/store_Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                tools:text="Store Name " />

            <TextView
                android:id="@+id/store_category_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                tools:text=" store category " />

            <TextView
                android:id="@+id/store_locality"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                tools:text="store locality" />

            <TextView
                android:id="@+id/store_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                tools:text="store Phone " />

            <TextView
                android:id="@+id/store_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                tools:text="store description " />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_weight="4"
                android:orientation="vertical">

                <com.google.android.gms.maps.MapView
                    android:id="@+id/map"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:apiKey="@string/mapKey"
                    android:clickable="true"
                    android:focusable="true" />

            </LinearLayout>

            <Button
                android:id="@+id/store_Contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/envoyer_un_message" />


        </LinearLayout>
    </ScrollView>

</FrameLayout>
